--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -20,16 +20,15 @@ jobs:
 
       - name: Install dependencies
         run: |
-          if [ -f requirements.txt ]; then
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
-          else
-            echo "requirements.txt not found!"
-            exit 1
-          fi
+          python -m venv venv
+          source venv/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest
+        run: |
+          source venv/bin/activate
+          pytest --maxfail=1 --disable-warnings
 
       - name: Test Docker Build
         run: |
