--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,12 +8,16 @@ on:
 
 jobs: 
   test:
-    runs-on: Ubuntu-latest 
+    runs-on: ubuntu-latest 
     steps:
-     - uses: action/checkout@v4
-     - uses: actions/setup-python@v2
+     - name: Checkout repository
+       uses: actions/checkout@v3
+
+     - name: Set up Python
+       uses: actions/setup-python@v4
        with:
-        python-version: “3.11”
+        python-version: '3.11'
+
      - name: Install dependencies 
        run: | 
         python -m install —upgrade pip
