--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,8 @@ jobs:
 
      - name: Install dependencies 
        run: | 
-        python -m install —upgrade pip
+        pip install --upgrade pip
         pip install -r requirements.txt
+
      - name: test fastapi
        run: pytest
