--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,6 @@ on:
   pull_request:
      branches: 
         - main 
-  workflow_dispatch:
 
 jobs: 
   test:
@@ -25,3 +24,10 @@ jobs:
 
      - name: test fastapi
        run: pytest
+
+     - name: Test Docker Build
+       run: |
+        docker build -t fastapi-app .
+        docker run -d --name test-container -p 8000:8000 fastapi-app
+        sleep 5
+        curl http://localhost:8000/api/v1/books
