--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   app:
     build: .
-    container_name: fastapi
+    container_name: fastapi_app
     ports:
       - "8000:8000"
     networks:
