--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 events {}
 
 http {
-    upstream fastapi_app {
+    upstream fastapi {
         server fastapi_app:8000;
     }
 
@@ -10,7 +10,7 @@ http {
         server_name 18.246.228.206;
 
         location / {
-            proxy_pass http://fastapi_app;
+            proxy_pass http://fastapi;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
